--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,8 @@
+/* CSS Variables */
 *{
     --first-color: rgb(67, 67, 160);
     --second-color: rgb(45, 45, 109);
+    --third-color: rgb(1, 48, 22);
 }
 body{
     background: linear-gradient(to top left, rgb(60, 60, 167),rgba(134, 253, 134,0.4));
@@ -8,12 +10,26 @@ body{
     padding: 0;
     height: 97vh;
 }
-nav.navbar{
-    margin: 20px;
+
+/* Navbar */
+.navbar{
+    width: 90%;
+    margin: 20px auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+/* Logo in navbar */
+.logo{
     display: flex;
     align-items: center;
     gap: 10px;
     cursor: pointer;
+}
+.img_logo{
+    display: inline-block;
+    width: 50px;
+    height: 50px;
 }
 .title{
     font-size: 20px;
@@ -24,12 +40,19 @@ nav.navbar{
     transition: all 0.3s;
     color:  rgb(67, 67, 160);
 }
-.nav_logo{
-    display: inline-block;
-    width: 50px;
-    height: 50px;
+.online-count{
+    color: var(--third-color);
+    display: flex;
+    align-items: center;
+    gap: 3px;
+}
+.online-count i{
+    color: rgba(51, 255, 0,0.4);
+    animation: color-dot 1s infinite linear alternate-reverse;
+    font-size: 0.5rem;
 }
 
+/* Message Container */
 .container{
     width: 80vw;
     padding: 20px;
@@ -70,6 +93,8 @@ nav.navbar{
     border-radius: 5px;
     padding: 5px;
 }
+
+/* Send Message Form */
 .send-container{
     margin: 10px;
     text-align: center;
@@ -103,3 +128,25 @@ input:focus{
     transform: scale(0.93);
     background-color: var(--first-color);
 }
+
+
+/* Animation for online users count */
+@keyframes color-dot {
+    0%{
+        color: rgb(60, 60, 167);
+    }
+    100%{
+        color: rgb(102, 255, 102);
+    }
+}
+/* @keyframes color-dot {
+    0%{
+        color: rgb(15, 255, 3);
+    }
+    50%{
+        color: rgba(51, 255, 0,0.4);
+    }
+    100%{
+        color: rgb(0, 128, 0);
+    }
+} */
