--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,6 +71,9 @@ body{
     width: 40%;
     margin-block: 5px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    word-wrap: break-word; /* Allows long words to break and wrap to the next line */
+    overflow-wrap: break-word; /* Handles line breaks within words */
+    white-space: pre-line; /* Preserves line breaks within the text content */
 }
 .left{
     float: left;
@@ -88,7 +91,6 @@ body{
     background-color: #000000db;
     width: 98.75%;
     text-align: center;
-    height: 20px;
     font-size: 0.8rem;
     border-radius: 5px;
     padding: 5px;
@@ -139,14 +141,13 @@ input:focus{
         color: rgb(102, 255, 102);
     }
 }
-/* @keyframes color-dot {
-    0%{
-        color: rgb(15, 255, 3);
+
+
+@media screen and (max-width: 450px) {
+    body{
+        height: 100%;
     }
-    50%{
-        color: rgba(51, 255, 0,0.4);
+    .btn{
+        margin-block: 1rem;
     }
-    100%{
-        color: rgb(0, 128, 0);
-    }
-} */
+}
